@@ -14,6 +14,7 @@ Change log next version
 * Upgraded Spring MVC module to depend on Spring 4.0.2.RELEASE.
 * Fixed a bug with JsonPath that prevented parsing of JSON attributes starting with a number (issue 318).
 * Added appendRootPath method to ResponseSpecBuilder
+* Added noRootPath method to ResponseSpecBuilder
 
 Change log 2.3.0 (2014-01-23)
 -----------------------------
